# personal-health-reporting

./: .env.example  .gitignore  README.md  claude.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
cloud_functions/ingest_api/: main.py  requirements.txt
cloud_functions/ingest_api/tests/: test_main.py
dagster/: definitions.py
dagster/assets/: dbt.py  ingestion.py
dagster/resources/: gcp.py
dagster/schedules/: daily.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
rill/: rill.yaml
terraform/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/backends/: dev.tfbackend  prod.tfbackend
terraform/environments/: dev.tfvars  prod.tfvars
terraform/modules/bigquery/: main.tf  outputs.tf
terraform/modules/cloud_functions/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud_storage/: main.tf  outputs.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/bindings/: main.tf  variables.tf
terraform/modules/iam/service_accounts/: main.tf  outputs.tf
terraform/modules/state_bucket/: main.tf  outputs.tf
