[project]
name = "personal-health-reporting"
version = "0.1.0"
description = "Data pipeline for personal health data: API → GCS → BigQuery → dbt"
requires-python = ">=3.12"
dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-dbt",
    "dbt-core",
    "dbt-bigquery",
    "dlt[bigquery]",
    "google-cloud-bigquery",
    "google-cloud-storage",
    "google-cloud-functions",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["cloud_functions"]
